<resources>
    <string name="app_name">Memorandum01</string>
    <string name="action_settings">Settings</string>
    <string name="ticker">备 忘 录</string>
    <string name="content_text">内容</string>
    <string name="content">请输入内容</string>
    <string name="title">请输入标题</string>
    <string name="date_text">日期</string>
    <string name="date">请选择日期</string>
    <string name="time_text">时间</string>
    <string name="time">请选择时间</string>
    <string name="btn">保 存</string>
    <string name="ticker_add">添加备忘录</string>
</resources>
